<resources>
    <string name="app_name">Bluewater: Efficiency</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Settings</string>
    <string name="title_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_history">History</string>
    <string name="LCT">Last Cycle:</string>
    <string name="EFF">Efficiency:</string>
    <string name="CC">Cycle Count:</string>
    <string name="CT">Current Cycle:</string>
    <string name="BCT">Best Cycle:</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_translate">Language</string>
    <string name="pref_description_translate">Change the language of the application</string>

    <string-array name="languages">
        <item>Español</item>
        <item>English</item>
    </string-array>

    <string-array name="languagesValues">
        <item>es</item>
        <item>en</item>
    </string-array>

    <string name="pref_title_UPS">Units per cycle</string>
    <string name="pref_description_UPS">The amount of elements produced per cycle</string>
    <string name="pref_default_UPS">30</string>

    <string name="pref_title_SCT">Standard cycle time</string>
    <string name="pref_description_SCT">The time necessary to complete a product in a cycle, measured in parts of minutes per product</string>
    <string name="pref_default_SCT">0.2</string>

    <string name="pref_title_password">Password</string>
    <string name="pref_description_password">Change the password</string>
    <string name="pref_default_password">1234</string>
    <string name="password">Submit</string>
    <string name="wrongPass">Wrong password</string>
    <string name="passError">Unknown error</string>
    <string name="blank">Password field is empty</string>

    <string name="error1">You don\'t have cycles to undo</string>
    <string name="error2">You already undo one cycle</string>

    <string name="TCP">Cycle Completed</string>
    <string name="TT">Total Time</string>

</resources>
